# natural-language-analytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  starter.py
.claude/agents/: reviewer.md  test-writer.md
.claude/commands/: implement.md  pr.md  review.md  spec.md  start.md  tasks.md
config/: CLAUDE.md  db_config.py  env_config.py  llm_config.py  log_config.py
docs/: FRS.md  SDS.md
openspec/: project.md
openspec/changes/NLA-005-impl-db-config/: plan.md  proposal.md  tasks.md
openspec/changes/NLA-005-impl-db-config/specs/db-config/: spec.md
openspec/changes/NLA-016-impl-nl-to-sql/: plan.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-NLA-003-impl-env-config/: plan.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-NLA-004-impl-log-config/: plan.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-nla-001-create-pyproject-toml/: plan.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-nla-002-create-env-example/: plan.md  proposal.md  tasks.md
openspec/changes/frs-ticket-breakdown/: design.md  proposal.md  tasks.md
openspec/changes/nla-001-create-pyproject-toml/: tasks.md
openspec/specs/env-config/: spec.md
openspec/specs/env-configuration/: spec.md
openspec/specs/log-config/: spec.md
openspec/specs/project-packaging/: spec.md
services/: CLAUDE.md  exceptions.py  nl_to_sql.py
tests/: test_starter.py
tests/config/: test_db_config.py  test_env_config.py  test_llm_config.py  test_log_config.py
tests/services/: test_exceptions.py  test_nl_to_sql.py
(+14 files in other folders)
