[project]
name = "natural-language-analytics"
version = "0.1.0"
description = "Natural language analytics dashboard — query SQL data in plain English"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "sqlalchemy>=2.0",
    "sqlglot>=25.0",
    "anthropic>=0.30",
    "openai>=1.30",
    "google-genai>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
    "pymysql>=1.1",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
